--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "type": "git",
     "url": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack.git"
   },
+  "homepage": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack/",
   "bugs": {
     "url": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack/issues/"
   },
-  "homepage": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack/",
   "keywords": [
-    "xpack"
+    "xpack",
+    "c++",
+    "micro-os-plus"
   ],
   "author": {
     "name": "Liviu Ionescu",
@@ -30,8 +32,14 @@
   "license": "MIT",
   "config": {},
   "dependencies": {},
+  "bundleDependencies": [],
   "devDependencies": {},
   "xpack": {
-    "minimumXpmRequired": "0.13.7"
+    "minimumXpmRequired": "0.14.0",
+    "dependencies": {},
+    "devDependencies": {},
+    "properties": {},
+    "actions": {},
+    "buildConfigurations": {}
   }
 }
