--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "type": "git",
     "url": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack.git"
   },
-  "homepage": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack/",
+  "homepage": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack",
   "bugs": {
-    "url": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack/issues/"
+    "url": "https://github.com/micro-os-plus/rtos-synthetic-posix-xpack/issues"
   },
   "keywords": [
     "xpack",
@@ -27,7 +27,7 @@
   "author": {
     "name": "Liviu Ionescu",
     "email": "ilg@livius.net",
-    "url": "https://github.com/ilg-ul/"
+    "url": "https://github.com/ilg-ul"
   },
   "license": "MIT",
   "config": {},
